<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.mobile.pratice.Activity.HpActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/daftar"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inputkan Nomer Telpon Anda"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_textbox"
            android:orientation="horizontal">

<!--            <ImageView-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="23dp"-->
<!--                android:src="@drawable/ic_phone_android" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="+62 "
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <View
                style="@style/Divider.Vertical"
                android:layout_marginStart="5dp"
                android:background="@color/colorBlack" />

            <EditText
                android:id="@+id/nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorWhite"
                android:digits="1234567890"
                android:maxLength="11"
                android:fontFamily="@font/roboto"
                android:hint="@string/no_handphone"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/periksa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_radius"
            android:text="@string/periksa"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="System Akan Mengirimkan Kode OTP\nKe Nomor Handphone Diatas"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>