<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pratis"
    android:orientation="vertical"
    tools:context="com.mobile.pratice.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/pratisbaru" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="+62 "
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:digits="1234567890"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/no_handphone"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/password" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_radius"
                android:text="@string/masuk"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/jika_belum_memiliki_akun_silahkan"
                    android:textColor="@color/colorGrey"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/daftar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text=" Daftar"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/daftar"
                        android:layout_marginStart="4dp"
                        android:background="@color/colorPrimary" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/layout_loading"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>