<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.mobile.pratice.Activity.OtpActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/daftar"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inputkan Kode OTP Anda"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otp1"
                android:maxLength="1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/ic_textbox"
                android:digits="1234567890"
                android:fontFamily="@font/roboto"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/otp2"
                android:maxLength="1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="3dp"
                android:background="@drawable/ic_textbox"
                android:digits="1234567890"
                android:fontFamily="@font/roboto"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/otp3"
                android:maxLength="1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="3dp"
                android:background="@drawable/ic_textbox"
                android:digits="1234567890"
                android:fontFamily="@font/roboto"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/otp4"
                android:maxLength="1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="3dp"
                android:background="@drawable/ic_textbox"
                android:digits="1234567890"
                android:fontFamily="@font/roboto"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/otp5"
                android:maxLength="1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="3dp"
                android:background="@drawable/ic_textbox"
                android:digits="1234567890"
                android:fontFamily="@font/roboto"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/otp6"
                android:maxLength="1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="3dp"
                android:background="@drawable/ic_textbox"
                android:digits="1234567890"
                android:fontFamily="@font/roboto"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/konfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_radius"
            android:text="@string/konfirmasi"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/terkirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/saya_tidak_menerima_kode"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="00:00"
            android:visibility="gone"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/kirim_ulang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/kirim_ulang_kode"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>