<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pratis"
    android:orientation="vertical"
    tools:context="com.mobile.pratice.Activity.DaftarActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/daftar"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:src="@drawable/name" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/nama"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:src="@drawable/email" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:layout_gravity="top"
                    android:src="@drawable/home_address" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/roboto"
                    android:gravity="left|top"
                    android:hint="@string/alamat"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:src="@drawable/password" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:src="@drawable/password" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/konf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:fontFamily="@font/roboto"
                    android:hint="Konfirmasi Password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_textbox"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="23dp"
                    android:src="@drawable/gender" />

                <View
                    style="@style/Divider.Vertical"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorBlack" />

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:entries="@array/gender"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/menyetujui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saya_menyetujui"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/syarat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Syarat"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" dan "
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/ketentuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ketentuan"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_radius"
                android:text="@string/daftar"
                android:textColor="@color/colorWhite" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>